fixed layout issue of profile menu

--- a/client/src/styles/AuthContainer-style.css
+++ b/client/src/styles/AuthContainer-style.css
@@ -7,7 +7,7 @@
     background-color: white;
     border: solid #009E5C;
     border-width: 0px 0px 5px 0px;
-    box-shadow: 0px 10px 10px rgb(211, 211, 211);
+    box-shadow: 0px 10px 10px #d3d3d3;
     text-align: left;
     width: 45%;
     padding: 2.5em 0;
